Fixed logo on small screends :bug:

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,8 @@
 
 .site-header {
     text-align: center;
-    width: 500px;
+    width: auto;
+    max-width: 500px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
